--- a/index.html
+++ b/index.html
@@ -1,17 +1,44 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en, arabic">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>About-Me</title>
-    <link rel="stylesheet" href="reset.css">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="css/reset.css">
+    <link rel="stylesheet" href="css/style.css">
 </head>
+
 <body>
-    <header></header>
-    <main></main>
-    <footer></footer>
-    <script src="app.js"></script>
+    <header>
+        <h1>About Me</h1>
+        <h2 id='welcome'></h2>
+        <h3>My name is Ahmad Jallad. I am 23 years old, live in Amman Jordan, Graduated as a power engineer. I am a
+            gamer, tech enthusiast & cryptocurrency trader</h2>
+    </header>
+    <hr>
+    <main>
+        <p class="ans1">Do I Like programing</p><br>
+        <p class="ans"></p><br>
+        <hr>
+        <p class="ans2">Do Like Video Games</p><br>
+        <p class="ans"></p><br>
+        <hr>
+        <p class="ans3">Do I study as Engniring digree</p><br>
+        <p class="ans"></p><br>
+        <hr>
+        <p class="ans4">Do I like Facebook?</p><br>
+        <p class="ans"></p><br>
+        <hr>
+        <p class="ans5">Do I like mansaf (منسف)?</p><br>
+        <p class="ans"></p><br>
+    </main>
+
+    <footer>
+        <span>&copf; Ahmad Jallad</span>
+    </footer>
+    <script src="js/app.js"></script>
 </body>
+
 </html>
