add 2 new Q one about gessing game and one have mult answers + and top ten and work exp on html in aside change the background to ligher on

--- a/index.html
+++ b/index.html
@@ -33,8 +33,44 @@
         <hr>
         <p class="ans5">Do I like mansaf (منسف)?</p><br>
         <p class="ans"></p><br>
-    </main>
+        <hr>
+        <p class="ans6">Guess a Number between 1 - 9.</p><br>
+        <p class="ans"></p><br>
+        <hr>
+        <p class="ans7">Who is the main character in attack on titan?</p><br>
+        <p class="ans"></p><br>
+        <hr>
 
+
+    </main>
+    <aside>
+        <section class="lists">
+            <ol>
+                <h5>Top Ten favorite things</h5>
+                <li>hung out with a friend</li>
+                <li>GaminG</li>
+                <li>Apex Legends</li>
+                <li>black clover anime</li>
+                <li>Watching Youtube</li>
+                <li>eating food</li>
+                <li>Ice cream</li>
+                <li>computers</li>
+                <li>driving</li>
+                <li>try new things</li>
+            </ol>
+
+            <hr>
+
+            <ul>
+                <h5>Working Experience</h5>
+                <li>studded power electrical engineer at faculty of engineering technology</li>
+                <li>worked as donation officer at fundraising department with takyet um ali</li>
+                <li>worked as waiter in hotel hyatt amman</li>
+                <li>worked as maintenance engineer at alwadifood</li>
+            </ul>
+        </section>
+    </aside>
+    <hr>
     <footer>
         <span>&copf; Ahmad Jallad</span>
     </footer>
