--- a/index.html
+++ b/index.html
@@ -1,80 +1,137 @@
 <!DOCTYPE html>
 <html lang="en, arabic">
-
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>About-Me</title>
-    <link rel="stylesheet" href="css/reset.css">
-    <link rel="stylesheet" href="css/style.css">
-</head>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Benne&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="css/reset.css" />
+    <link rel="stylesheet" href="css/style.css" />
+  </head>
 
-<body>
+  <body>
     <header>
+      <div>
         <h1>About Me</h1>
-        <h2 id='welcome'></h2>
-        <h3>My name is Ahmad Jallad. I am 23 years old, live in Amman Jordan, Graduated as a power engineer. I am a
-            gamer, tech enthusiast & cryptocurrency trader</h2>
+        <div class="header-2_1">
+          <h2 id="welcome"></h2>
+          <h3>
+            My name is Ahmad Jallad. I am 23 years old, live in Amman Jordan,
+            Graduated as a power engineer. I am a gamer, tech enthusiast &
+            cryptocurrencies trader
+          </h3>
+        </div>
+      </div>
+      <div>
+        <nav>
+          <ul>
+            <li class="fisrt">
+              <a
+                class="nav_a"
+                href="https://ahmadjlallad.github.io/reading-notes/"
+                >reading-notes</a
+              >
+            </li>
+            <li class="fisrt2">
+              <a
+                class="nav_a"
+                href="https://ahmadjlallad.github.io/Elzero-study/index"
+                >study for web docs</a
+              >
+            </li>
+            <li class="fisrt3">
+              <a
+                class="nav_a"
+                target="email"
+                href="mailto:ahmadjlad@hotmail.com"
+                >my email</a
+              >
+            </li>
+          </ul>
+        </nav>
+      </div>
     </header>
-    <hr>
+    <!--  <hr /> -->
     <main>
-        <p class="ans1">Do I Like programing</p><br>
-        <p class="ans"></p><br>
-        <hr>
-        <p class="ans2">Do Like Video Games</p><br>
-        <p class="ans"></p><br>
-        <hr>
-        <p class="ans3">Do I study as Engniring digree</p><br>
-        <p class="ans"></p><br>
-        <hr>
-        <p class="ans4">Do I like Facebook?</p><br>
-        <p class="ans"></p><br>
-        <hr>
-        <p class="ans5">Do I like mansaf (منسف)?</p><br>
-        <p class="ans"></p><br>
-        <hr>
-        <p class="ans6">Guess a Number between 1 - 9.</p><br>
-        <p class="ans"></p><br>
-        <hr>
-        <p class="ans7">Who is the main character in attack on titan?</p><br>
-        <p class="ans"></p><br>
-        <hr>
-
-
+      <p class="ans1">Do I Like programing</p>
+      <br />
+      <p id="anes1" class="ans"></p>
+      <br />
+      <!-- <hr /> -->
+      <p class="ans2">Do Like Video Games</p>
+      <br />
+      <p id="anes2" class="ans"></p>
+      <br />
+      <!-- <hr /> -->
+      <p class="ans3">Do I study as Engining degree</p>
+      <br />
+      <p id="anes3" class="ans"></p>
+      <br />
+      <!-- <hr /> -->
+      <p class="ans4">Do I like Facebook?</p>
+      <br />
+      <p id="anes4" class="ans"></p>
+      <br />
+      <!-- <hr /> -->
+      <p class="ans5">Do I like mansaf (منسف)?</p>
+      <br />
+      <p id="anes5" class="ans"></p>
+      <br />
+      <!-- <hr /> -->
+      <p class="ans6">Guess a Number between 1 - 9.</p>
+      <br />
+      <p id="anes6" class="ans"></p>
+      <br />
+      <!-- <hr /> -->
+      <p class="ans7">Who is the main character in attack on titan?</p>
+      <br />
+      <p id="anes7" class="ans"></p>
+      <br />
+      <!-- <hr /> -->
     </main>
     <aside>
-        <section class="lists">
-            <ol>
-                <h5>Top Ten favorite things</h5>
-                <li>hung out with a friend</li>
-                <li>GaminG</li>
-                <li>Apex Legends</li>
-                <li>black clover anime</li>
-                <li>Watching Youtube</li>
-                <li>eating food</li>
-                <li>Ice cream</li>
-                <li>computers</li>
-                <li>driving</li>
-                <li>try new things</li>
-            </ol>
+      <section class="lists">
+        <ol>
+          <h5>Top Ten favorite things</h5>
+          <li>hung out with a friend</li>
+          <li>GaminG</li>
+          <li>Apex Legends</li>
+          <li>black clover anime</li>
+          <li>Watching Youtube</li>
+          <li>eating food</li>
+          <li>Ice cream</li>
+          <li>computers</li>
+          <li>driving</li>
+          <li>try new things</li>
+        </ol>
 
-            <hr>
+        <!-- <hr /> -->
 
-            <ul>
-                <h5>Working Experience</h5>
-                <li>studded power electrical engineer at faculty of engineering technology</li>
-                <li>worked as donation officer at fundraising department with takyet um ali</li>
-                <li>worked as waiter in hotel hyatt amman</li>
-                <li>worked as maintenance engineer at alwadifood</li>
-            </ul>
-        </section>
+        <ul>
+          <h5>Working Experience</h5>
+          <li class="ul_b">
+            studded power electrical engineer at faculty of engineering
+            technology
+          </li>
+          <li class="ul_b">
+            worked as donation officer at fundraising department with takyet um
+            ali
+          </li>
+          <li class="ul_b">worked as waiter in hotel hyatt amman</li>
+          <li class="ul_b">worked as maintenance engineer at alwadifood</li>
+        </ul>
+      </section>
     </aside>
-    <hr>
+    <!-- <hr /> -->
     <footer>
-        <span>&copf; Ahmad Jallad</span>
+      <p>&copf; Ahmad Jallad</p>
     </footer>
     <script src="js/app.js"></script>
-</body>
-
+  </body>
 </html>
