--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
   <body>
     <header>
-      <div>
+      <div class="header_div">
         <h1>About Me</h1>
         <div class="header-2_1">
           <h2 id="welcome"></h2>
@@ -28,7 +28,7 @@
           </h3>
         </div>
       </div>
-      <div>
+      <div class="sticky_please">
         <nav>
           <ul>
             <li class="fisrt">
